--- a/src/main/resources/templates/word.html
+++ b/src/main/resources/templates/word.html
@@ -37,7 +37,7 @@
         <h4 th:text="${table.title}"></h4>
         <!--这个是每个请求的说明，方便生成文档后进行整理-->
         <h5 th:text="${table.tag}"></h5>
-        <table border="1" cellspacing="0" cellpadding="0" width="100%">
+        <table border="1" style="border-color: #BFBFBF;border-collapse:collapse;empty-cell:show;" cellspacing="0" cellpadding="0" width="100%">
             <tr class="bg">
                 <td colspan="5" th:text="${table.tag}"></td>
             </tr>
