change the template
change the template

--- a/src/main/resources/templates/word.html
+++ b/src/main/resources/templates/word.html
@@ -92,7 +92,7 @@
             </tr>
 
             <tr class="bg">
-                <td colspan="5">示例</td>
+                <td colspan="5">示例: </td>
             </tr>
             <tr class="specialHeight">
                 <td class="bg">请求参数</td>
